--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,14 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Jwt": {
+      "Issuer": "YourIssuer",
+      "Audience": "YourAudience",
+      "Key": "ReplaceThisWithAReallyStrongAndSecretKeyOfSufficientLength!",
+      "ExpiryMinutes": "60"
     }
+
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
