--- a/appsettings.json
+++ b/appsettings.json
@@ -3,15 +3,15 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "Jwt": {
-      "Issuer": "YourIssuer",
-      "Audience": "YourAudience",
-      "Key": "ReplaceThisWithAReallyStrongAndSecretKeyOfSufficientLength!",
-      "ExpiryMinutes": "60"
     }
-
   },
+  "Jwt": {
+    "Issuer": "ECommerceIssuer",
+    "Audience": "ECommerceAudience",
+    "Key": "REDACTED_REALLY_STRONG_KEY",
+    "ExpiryMinutes": "60"
+  },
+
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "EcommerceConnectionString": "Server=.;DataBase=Ecommerce;Truseted_Connection=True;TrustServerCertificate=True;Encrypt=True"
