--- a/appsettings.json
+++ b/appsettings.json
@@ -5,15 +5,28 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "Jwt": {
     "Issuer": "ECommerceIssuer",
     "Audience": "ECommerceAudience",
     "Key": "REDACTED_REALLY_STRONG_KEY",
-    "ExpiryMinutes": "60"
+    "ExpiryMinutes": 60
+  },
+  "Email": {
+    "SmtpHost": "smtp.example.com",
+    "SmtpPort": "587",
+    "SmtpUser": "your_email@example.com",
+    "SmtpPass": "your_password",
+    "FromEmail": "your_email@example.com"
+  },
+
+  "Owner": {
+    "Email": "moaze105@gmail.com"
   },
 
   "AllowedHosts": "*",
+
   "ConnectionStrings": {
-    "EcommerceConnectionString": "Server=.;DataBase=Ecommerce;Truseted_Connection=True;TrustServerCertificate=True;Encrypt=True"
+    "EcommerceConnectionString": "Server=.;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=True"
   }
 }
