finish payment method and some of the controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -19,6 +19,17 @@
     "SmtpPass": "your_password",
     "FromEmail": "your_email@example.com"
   },
+  "Payment": {
+    "Secret": "MY_SUPER_SECRET_KEY"
+  },
+
+  "Paymob": {
+    "ApiKey": "YOUR_API_KEY_HERE",
+    "IntegrationId": "YOUR_INTEGRATION_ID",
+    "IframeId": "YOUR_IFRAME_ID",
+    "Currency": "EGP",
+    "BaseUrl": "https://accept.paymob.com/api"
+  },
 
   "Owner": {
     "Email": "moaze105@gmail.com"
