generate logout and expity token

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,18 +7,22 @@
   },
 
   "Jwt": {
-    "Issuer": "ECommerceIssuer",
-    "Audience": "ECommerceAudience",
-    "Key": "REDACTED_REALLY_STRONG_KEY",
-    "ExpiryMinutes": 60
+    "Key": "YOUR_LONG_SECRET",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience",
+    "ExpiryMinutes": 15
+  },
+  "RefreshToken": {
+    "ExpiryDays": 14
   },
   "Email": {
-    "SmtpHost": "smtp.example.com",
+    "SmtpHost": "smtp.gmail.com",
     "SmtpPort": "587",
-    "SmtpUser": "your_email@example.com",
-    "SmtpPass": "your_password",
-    "FromEmail": "your_email@example.com"
+    "SmtpUser": "eldiastymohamed97@gmail.com",
+    "SmtpPass": "hobrrwfuviepdtgx",
+    "FromEmail": "YOUR_GMAIL@gmail.com"
   },
+
   "Payment": {
     "Secret": "MY_SUPER_SECRET_KEY"
   },
@@ -38,6 +42,9 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "EcommerceConnectionString": "Server=.;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=True"
+    "EcommerceConnectionString": "Server=DESKTOP-8KPD8G5\\SQLEXPRESS;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False;"
   }
+
+
+
 }
