Add comprehensive README with full documentation

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,13 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# Environment-specific settings with secrets
+appsettings.Development.json
+appsettings.Local.json
+appsettings.*.local.json
+
+# Secrets
+secrets.json
+.env
+.env.local
