--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,47 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Information"
     }
+  },
+
+  "Jwt": {
+    "Key": "dev-secret-key-very-long-for-testing-purposes-at-least-32-chars",
+    "Issuer": "DevIssuer",
+    "Audience": "DevAudience",
+    "ExpiryMinutes": 30
+  },
+
+  "RefreshToken": {
+    "ExpiryDays": 14
+  },
+
+  "Email": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": "587",
+     "SmtpUser": "eldiastymohamed97@gmail.com",   
+    "SmtpPass": "hobrrwfuviepdtgx",               
+    "FromEmail": "eldiastymohamed97@gmail.com"
+  },
+
+  "Payment": {
+    "Secret": "dev-payment-secret"
+  },
+
+  "Paymob": {
+    "ApiKey": "dev-paymob-api-key",
+    "IntegrationId": "dev-integration-id",
+    "IframeId": "dev-iframe-id",
+    "Currency": "EGP",
+    "BaseUrl": "https://accept.paymob.com/api"
+  },
+
+  "Owner": {
+    "Email": "moaze105@gmail.com"  
+  },
+
+  "ConnectionStrings": {
+    "EcommerceConnectionString": "Server=DESKTOP-8KPD8G5\\SQLEXPRESS;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False;"
   }
 }
