--- a/appsettings.json
+++ b/appsettings.json
@@ -7,24 +7,26 @@
   },
 
   "Jwt": {
-    "Key": "YOUR_LONG_SECRET",
-    "Issuer": "YourIssuer",
-    "Audience": "YourAudience",
-    "ExpiryMinutes": 15
+    "Key": "YOUR_LONG_SECRET_KEY_AT_LEAST_32_CHARACTERS_LONG",
+    "Issuer": "YourAppIssuer",
+    "Audience": "YourAppAudience",
+    "ExpiryMinutes": 30
   },
+
   "RefreshToken": {
     "ExpiryDays": 14
   },
+
   "Email": {
     "SmtpHost": "smtp.gmail.com",
     "SmtpPort": "587",
-    "SmtpUser": "eldiastymohamed97@gmail.com",
-    "SmtpPass": "hobrrwfuviepdtgx",
-    "FromEmail": "YOUR_GMAIL@gmail.com"
+    "SmtpUser": "your-email@gmail.com",
+    "SmtpPass": "your-app-password",
+    "FromEmail": "noreply@yourapp.com"
   },
 
   "Payment": {
-    "Secret": "MY_SUPER_SECRET_KEY"
+    "Secret": "YOUR_PAYMENT_SECRET_KEY"
   },
 
   "Paymob": {
@@ -36,15 +38,12 @@
   },
 
   "Owner": {
-    "Email": "moaze105@gmail.com"
+    "Email": "admin@yourapp.com"
   },
 
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "EcommerceConnectionString": "Server=DESKTOP-8KPD8G5\\SQLEXPRESS;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False;"
+    "EcommerceConnectionString": "Server=YOUR_SERVER;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False;"
   }
-
-
-
 }
