Add ProfileImage column migration and update database schema

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,30 +5,30 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
-
   "Jwt": {
     "Key": "dev-secret-key-very-long-for-testing-purposes-at-least-32-chars",
     "Issuer": "DevIssuer",
     "Audience": "DevAudience",
     "ExpiryMinutes": 30
   },
-
   "RefreshToken": {
     "ExpiryDays": 14
   },
-
   "Email": {
     "SmtpHost": "smtp.gmail.com",
     "SmtpPort": "587",
-     "SmtpUser": "eldiastymohamed97@gmail.com",   
-    "SmtpPass": "hobrrwfuviepdtgx",               
+    "SmtpUser": "eldiastymohamed97@gmail.com",
+    "SmtpPass": "cwbkwqobmcysqeco",
     "FromEmail": "eldiastymohamed97@gmail.com"
   },
-
+  "Otp": {
+    "Enabled": true,
+    "ExpiryMinutes": 5,
+    "Length": 6
+  },
   "Payment": {
     "Secret": "dev-payment-secret"
   },
-
   "Paymob": {
     "ApiKey": "dev-paymob-api-key",
     "IntegrationId": "dev-integration-id",
@@ -36,11 +36,9 @@
     "Currency": "EGP",
     "BaseUrl": "https://accept.paymob.com/api"
   },
-
   "Owner": {
-    "Email": "moaze105@gmail.com"  
+    "Email": "moaze105@gmail.com"
   },
-
   "ConnectionStrings": {
     "EcommerceConnectionString": "Server=DESKTOP-8KPD8G5\\SQLEXPRESS;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False;"
   }
