--- a/appsettings.json
+++ b/appsettings.json
@@ -20,9 +20,9 @@
   "Email": {
     "SmtpHost": "smtp.gmail.com",
     "SmtpPort": "587",
-    "SmtpUser": "your-email@gmail.com",
-    "SmtpPass": "your-app-password",
-    "FromEmail": "noreply@yourapp.com"
+    "SmtpUser": "eldiastymohamed97@gmail.com",
+    "SmtpPass": "cwbkwqobmcysqeco",
+    "FromEmail": "eldiastymohamed97@gmail.com"
   },
 
   "Payment": {
@@ -44,6 +44,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "EcommerceConnectionString": "Server=YOUR_SERVER;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False;"
+    "EcommerceConnectionString": "Server=DESKTOP-8KPD8G5\\SQLEXPRESS;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
