--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -24,7 +24,8 @@
   "Otp": {
     "Enabled": true,
     "ExpiryMinutes": 5,
-    "Length": 6
+    "Length": 6,
+    "UseMockInDevelopment": true
   },
   "Payment": {
     "Secret": "dev-payment-secret"
